adding game page.js

--- a/game_page.html
+++ b/game_page.html
@@ -28,7 +28,7 @@
 			<br>
 			<input type="text" id="word" class="form_control" placeholder="word">
 			<br>
-			<button onclick="send()" class="btn btn-sucess" style="width: 30%;"></button>
+			<button onclick="send()" class="btn btn-sucess" style="width: 30%;">Send</button>
 		</center>
 	</div>
 
